compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__qualified_type_invalid_pipe_argument.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport mod\npub fn main() {\n  Nil |> mod.takes_wibble\n}\n"
---
----- SOURCE CODE
-- mod.gleam
pub type Wibble pub fn takes_wibble(value: Wibble) { value }

-- main.gleam

import mod
pub fn main() {
  Nil |> mod.takes_wibble
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:10
  │
4 │   Nil |> mod.takes_wibble
  │          ^^^^^^^^^^^^^^^^ This function does not accept the piped type

The argument is:

    Nil

But function expects:

    mod.Wibble
